[package]
name = "transactions"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
csv = "1.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
log = "0.4"
flexi_logger = "0.28"

[dev-dependencies]
polars = { version = "0.36", features = ["csv"] }
